--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "1.0.0",
   "main": "src/index.ts",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "tsoa": "^6.0.1"
+  },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.7",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
   "scripts": {
     "dev": "npx ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc"
+    "build": "tsoa spec-and-routes && tsc",
+    "start": "node dist/index.js"
   }
 }
